{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 76,
  "lineage": "3d76e01b-d4c3-0e4b-0684-8ea0921bd65a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a7aa644d4cc32ed",
            "association_id": "eipassoc-0cf32c863f322f5df",
            "domain": "vpc",
            "id": "eipalloc-03a7aa644d4cc32ed",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0dcf5b955e9dd97a4",
            "private_dns": "ip-192-168-7-22.us-east-2.compute.internal",
            "private_ip": "192.168.7.22",
            "public_dns": "ec2-18-190-110-39.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.110.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b72173faafef6fce",
            "association_id": "eipassoc-0bb3be889e614154d",
            "domain": "vpc",
            "id": "eipalloc-0b72173faafef6fce",
            "network_border_group": "us-east-2",
            "network_interface": "eni-04e6f4493820e0626",
            "private_dns": "ip-192-168-64-160.us-east-2.compute.internal",
            "private_ip": "192.168.64.160",
            "public_dns": "ec2-3-133-211-142.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.211.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:internet-gateway/igw-0f90d8fa94a6468b8",
            "id": "igw-0f90d8fa94a6468b8",
            "owner_id": "916547872461",
            "tags": {
              "Name": "eks_igw"
            },
            "tags_all": {
              "Name": "eks_igw"
            },
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "dependencies": [
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a7aa644d4cc32ed",
            "connectivity_type": "public",
            "id": "nat-0fb033e8b6fd9f5a0",
            "network_interface_id": "eni-0dcf5b955e9dd97a4",
            "private_ip": "192.168.7.22",
            "public_ip": "18.190.110.39",
            "subnet_id": "subnet-0fa61f71170a8c981",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b72173faafef6fce",
            "connectivity_type": "public",
            "id": "nat-0f9fadcda35e76048",
            "network_interface_id": "eni-04e6f4493820e0626",
            "private_ip": "192.168.64.160",
            "public_ip": "3.133.211.142",
            "subnet_id": "subnet-0734a2ef321029710",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_2",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:route-table/rtb-013a00dae387e4fd1",
            "id": "rtb-013a00dae387e4fd1",
            "owner_id": "916547872461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb033e8b6fd9f5a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw1",
            "aws_subnet.public_1",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:route-table/rtb-0114601f8cef8494e",
            "id": "rtb-0114601f8cef8494e",
            "owner_id": "916547872461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9fadcda35e76048",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw2",
            "aws_subnet.public_2",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:route-table/rtb-0c0da1d403b1dcef4",
            "id": "rtb-0c0da1d403b1dcef4",
            "owner_id": "916547872461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f90d8fa94a6468b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1d7d9a32d4cd6e8",
            "route_table_id": "rtb-013a00dae387e4fd1",
            "subnet_id": "subnet-02e2213f774dcf73f"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e9b810bc0252add",
            "route_table_id": "rtb-0114601f8cef8494e",
            "subnet_id": "subnet-0fdad653d77c8f322"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0155b80a0e99dfb7e",
            "route_table_id": "rtb-0c0da1d403b1dcef4",
            "subnet_id": "subnet-0fa61f71170a8c981"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320b18589dd5f7c6",
            "route_table_id": "rtb-0c0da1d403b1dcef4",
            "subnet_id": "subnet-0734a2ef321029710"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:subnet/subnet-02e2213f774dcf73f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e2213f774dcf73f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916547872461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-2a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-2a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "dependencies": [
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:subnet/subnet-0fdad653d77c8f322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdad653d77c8f322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916547872461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-2b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-2b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "dependencies": [
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:subnet/subnet-0fa61f71170a8c981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa61f71170a8c981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916547872461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-2a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-2a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "dependencies": [
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:subnet/subnet-0734a2ef321029710",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0734a2ef321029710",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916547872461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-2b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-2b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-066cbc8f442096d0e"
          },
          "dependencies": [
            "aws_vpc.secret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secret_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916547872461:vpc/vpc-066cbc8f442096d0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01674481e853bd6c0",
            "default_route_table_id": "rtb-0dcbc66b156324310",
            "default_security_group_id": "sg-07ea0fc650392284d",
            "dhcp_options_id": "dopt-0758b8dc865687ff5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-066cbc8f442096d0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcbc66b156324310",
            "owner_id": "916547872461",
            "tags": {
              "Name": "eks_sec"
            },
            "tags_all": {
              "Name": "eks_sec"
            }
          }
        }
      ]
    }
  ]
}